fixed toast visibility issue

--- a/static/CSS/base.css
+++ b/static/CSS/base.css
@@ -15,6 +15,22 @@ h1 {
     color: black !important;
 }
 
+.message-container {
+  position: fixed;
+  top: 100px;
+  right: 30px;
+  z-index: 999999999 !important;
+}
+
+.custom-toast {
+  overflow: visible;
+  color: black;
+}
+
+.toast-capper {
+  height: 2px;
+}
+
 footer {
     margin: 20px;
 }
